--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-.xcuserstate
+*.xcuserstate
+project.xcworkspace
+xcuserdata
+UserInterfaceState.xcuserstate
+project.xcworkspace/
+xcuserdata/
+UserInterface.xcuserstate
